# template

./: CMakeLists.txt  Test.cpp  main.cpp
src/: App.cpp  App.h
src/Service/: ConsoleDisplayService.cpp  ConsoleDisplayService.h  DisplayServiceInterface.h  FileService.cpp  FileService.h
